Blog made public

--- a/all.html
+++ b/all.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width", initial-scale=1.0 charset="utf-8" />
     <!--Title-->
-    <title>Recents - Notes from the Slumberground</title>
+    <title>All - Notes from the Slumberground</title>
     <meta name="description" content="Notes from the Slumber Ground: Index of Abheshek Pandey's personal blog.">
     <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">    
@@ -68,21 +68,21 @@
 </header>
 
 <div class="blog-title">
-  <p>Notes from the Slumberground</p>
+  <h1>Notes from the Slumberground</h1>
 </div>
 
 <main class="blog">
 
-<h1>Recent Posts</h1>
+<h1>All Blogs</h1>
 
 
-  <div>
-        <h2><a href="/blog/posts/monochrome-ssg-01.html">On Building a Static Site Generator with Python</a><small> </small></h2>
-        <a href="/blog/posts/monochrome-ssg-01.html" title="On Building a Static Site Generator with Python"><img src="./assets/monochrome01-gui-devito.png" alt=""></a>
-        <p>2022-10-22 | Tags: <em>python, coding, programming, projects</em> <br>
-        How I built a static site generator using Python, why I did and why I probably shouldn't have.</p>
-        <hr>
-  </div>
+  <p>
+      <h3><a href="/blog/posts/monochrome-ssg-01.html">On Building a Static Site Generator with Python</a><small> 2022-10-22</small></h3>
+      <em>Tags: python, coding, programming, projects</em> <br>
+      How I built a static site generator using Python, why I did and why I probably shouldn't have.
+  </p>
+
+
 
 
 </main>
