--- a/all.html
+++ b/all.html
@@ -15,57 +15,59 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
 <body>
-  <nav class="topnav" id="myTopnav">
-    <a href="/" class="logo">Abheshek Pandey</a>
-    <div class="split">
-        <a href="/#about">About</a>
-        <div class="dropdown">
-            <button class="dropbtn">
-                <a href="/tinkerings.html" class="button">Tinkerings</a>
-            </button>
-                <div class="dropdown-content">
-                    <a href="/tinkerings.html#code">Code</a>
-                    <a href="/tinkerings.html#algorhythm">Algorhythm</a>
-                    <!--<a href="#">Web Design</a>-->
+    <!--Header-->
+    <header class="site-header" id="site-header">
+        <nav class="topnav" id="myTopnav">
+            <a href="/" class="logo">Abheshek Pandey</a>
+            <div class="split">
+                <a href="/#about">About</a>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="/tinkerings.html" class="button">Tinkerings</a>
+                    </button>
+                        <div class="dropdown-content">
+                            <a href="/tinkerings.html#code">Code</a>
+                            <a href="/tinkerings.html#algorhythm">Algorhythm</a>
+                            <!--<a href="#">Web Design</a>-->
+                        </div>
                 </div>
-        </div>
-        <a href="/photography/">Photography</a>
-        <div class="dropdown">
-            <button class="dropbtn">
-                <a href="/ayande/" class="button">Ayan De</a>
-            </button>
-                <div class="dropdown-content">
-                    <a href="/ayande/#about">About</a>
-                    <a href="/ayande/#bibliography">Bibliography</a>
-                    <a href="/ayande/#contact">Contact</a>
+                <a href="/photography/">Photography</a>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="/ayande/" class="button">Ayan De</a>
+                    </button>
+                        <div class="dropdown-content">
+                            <a href="/ayande/#about">About</a>
+                            <a href="/ayande/#bibliography">Bibliography</a>
+                            <a href="/ayande/#contact">Contact</a>
+                        </div>
                 </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">
-                <a href="/blog/" class="button">Blog</a>
-            </button>
-                <div class="dropdown-content">
-                    <a href="/blog/">Recent</a>
-                    <a href="/blog/all.html">All</a>
-                </div>
-        </div> 
-        <a href="/#contact">Contact</a>
-        <button class="iconica place-items-center" id="theme-toggle-button">
-            <span class="sun-icon">
-                <i class="material-symbols-sharp">light_mode</i>
-            </span>
-            <span class="moon-icon">
-                <i class="material-symbols-sharp">dark_mode</i>
-            </span>
-        </button>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon menuMenu" onclick="menuButton()">
-            <span class="open-menu-icon">
-                <i class="material-symbols-sharp" id="menu">menu</i>
-            </span>
-        </a>
-    </div>
-</nav>
-</header>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="/blog/" class="button">Blog</a>
+                    </button>
+                        <div class="dropdown-content">
+                            <a href="/blog/">Recent</a>
+                            <a href="/blog/all.html">All</a>
+                        </div>
+                </div> 
+                <a href="/#contact">Contact</a>
+                <button class="iconica place-items-center" id="theme-toggle-button">
+                    <span class="sun-icon">
+                        <i class="material-symbols-sharp">light_mode</i>
+                    </span>
+                    <span class="moon-icon">
+                        <i class="material-symbols-sharp">dark_mode</i>
+                    </span>
+                </button>
+                <a href="javascript:void(0);" style="font-size:15px;" class="icon menuMenu" onclick="menuButton()">
+                    <span class="open-menu-icon">
+                        <i class="material-symbols-sharp" id="menu">menu</i>
+                    </span>
+                </a>
+            </div>
+        </nav>
+    </header>
 
 <div class="blog-title">
   <h1>Notes from the Slumberground</h1>
