--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Recents - Notes from the Slumberground</title>
     <meta name="description" content="Notes from the Slumber Ground: Index of Abheshek Pandey's personal blog.">
     <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">    
+    <link rel="stylesheet" href="/styles/style.css">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,500;0,700;1,500;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
